examples/test/testpolicy557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy557
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key19: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value47
          key12: value38
          key36: value31
      podSelector:
        matchLabels:
          key41: value37
          key43: value2
          key1: value4
